[package]
name = "zcash-cotyledon"
version = "0.1.0"
authors = ["sasha <sasha@zcash>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
bytes = "1.1.0"
chrono = "0.4.19"
hex = "0.4.3"
lazy_static = "1.4.0"
ordered-map = "0.4.2"
pin-project = "1.0.10"
rand = { version = "0.8.5", package = "rand" }

serde = { version = "1.0.137", features = ["serde_derive"] }
thiserror = "1.0.31"

futures = "0.3.21"
futures-util = "0.3"
tokio = { version = "1.18.2", features = ["net", "time", "tracing", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8", features = ["sync", "time"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
tower = { version = "0.4.13", features = ["retry", "discover", "load", "load-shed", "timeout", "util", "buffer"] }


#hyper = { version = "0.14", features = ["full"] }
trust-dns-server = "0.22.0"

zebra-network = {path = "/Users/sasha_work/repos/zebra/zebra-network"}
zebra-chain = {path = "/Users/sasha_work/repos/zebra/zebra-chain"}
zebra-state = {path= "/Users/sasha_work/repos/zebra/zebra-state"}

tonic = "0.7"
prost = "0.10"
async-trait = "0.1.58"

[build-dependencies]
tonic-build = "0.7"
